add direct state
